about img height correction

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             </div>
           </div>
           <figure class="border-2 border-dashed">
-            <img src="./assets/Rectangle.png" alt="Album" />
+            <img class="h-full rounded-2xl" src="./assets/Rectangle.png" alt="Album" />
           </figure>
         </div>
       </section>
